<resources>
    <string name="app_name">Bitcoin Wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Bitcoin is the most trusted</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="top_coin">Top coin</string>
    <string name="top_lead">Top Leader board</string>
    <string name="time_span_month">Month</string>
    <string name="time_span_all_time">All</string>
    <string name="time_span_year">Year</string>
    <string name="time_span_week">Week</string>
    <string name="time_span_day">Day</string>
    <string name="bitcoin_price">Bitcoin price</string>
    <string name="ether_price">Ether price</string>
    <string name="bch_price">Bitcoin Cash price</string>
    <string name="btn_ok">OK</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_help">Help</string>
    <string name="btn_add">Add</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_set">Set</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_paste">Paste</string>
    <string name="btn_share">Share</string>
    <string name="btn_set_as_default">Set as default</string>
    <string name="btn_request_coins">Request coins</string>
    <string name="btn_send_coins">Send coins</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_settings">Settings</string>
    <string name="show_qr">Show QR code</string>
    <string name="browse">Browse</string>
    <string name="block_last">Latest Blocks for Bitcoin</string>
    <string name="trans_last">Latest Transactions</string>
    <string name="all_block">See all blocks</string>
    <string name="price">%1$s price</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_explorer">Explorer</string>
    <string name="menu_market">Markets</string>
    <string name="retry">Retry</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="transactions">Transactions</string>
    <string name="size">Size</string>
    <string name="ms_dashboard">Data provided by cryptocompare.com.\nAuto refresh after 1 minute.</string>
    <string name="past_day">Past day</string>
    <string name="nav_utils">Utilities</string>
    <string name="news">News</string>
    <string name="nav_bitcoin_explorer">BlockChain Explorer</string>
    <string name="nav_setting">Settings</string>
    <string name="calculate_price">Calculate Exchange</string>
    <string name="title_history">%1$s Historical Data Lookup</string>
    <string name="blockchain_explorer">Blockchain Explorer</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="search">Search for block, transaction or address</string>
    <string name="summary">Summary</string>
    <string name="now">Just now</string>
    <string name="update_title">A new version is available!</string>
    <string name="update_message">This version fixes important bugs. For details, see the change log on Google Play.</string>
    <string name="menu_wallet">Wallet</string>
    <string name="reset">Your wallet was reset!\nIt will take some time to recover</string>
    <string name="disclaimer_remind_safety">Security note. Read the &lt;u&gt;safety notes&lt;/u&gt;.</string>
    <string name="disclaimer_remind_backup">You need to &lt;u&gt;back up your wallet&lt;/u&gt;!</string>
    <string name="progress_hours">%1$s, %2$d hours behind</string>
    <string name="progress_days">%1$s, %2$d days behind</string>
    <string name="progress_week">%1$s, %2$d weeks behind</string>
    <string name="progress_months">%1$s, %2$d months behind</string>
    <string name="progress_download">Sync with network</string>
    <string name="progress_stalled">Sync stalled</string>
    <string name="problem_storage">Sync: Storage issues</string>
    <string name="progress_problem_network">Sync: Network issues</string>
    <string name="clipboard_msg">Bitcoin address copied to clipboard</string>
    <string name="address_hint">To protect your privacy, your address will change once it receives a payment</string>
    <string name="insecure_device">Your device is old and insecure. Please only use for small amounts</string>
    <string name="balance_too_much">This amount is quite high for carrying in your pocket. Please move some to a safer place</string>
    <string name="balance_replaying">Balance is unavailable during replay.</string>
    <string name="exchange_rates">Exchange rates</string>
    <string name="exchange_empty">Could not load exchange rates.</string>
    <string name="exchange_rates_search">Could not search exchange rate.</string>
    <string name="exchange_default">default</string>
    <string name="rate">rate</string>
    <string name="balance">balance</string>
    <string name="price_from">Price from %s</string>
    <string name="search_exchange_rate">Search exchange rate</string>
    <string name="empty_text_received">Oops, we couldn\'t find any transactions!</string>
    <string name="empty_text_sent">No Bitcoins sent.</string>
    <string name="empty_text_how">Transfer bitcoin from any wallet.</string>
    <string name="warning_backup">Congratulations, you received your first payment! Have you already &lt;u&gt;backed up your wallet&lt;/u&gt;, to protect against loss?</string>
    <string name="warning_storage_encryption">Hint: to increase the safety of your wallet, you can &lt;u&gt;encrypt your device&lt;/u&gt;. This also protects data of other apps.</string>
    <string name="warning_chain_forking">The Bitcoin network is undergoing maintenance. You\'re advised to not send or receive any coins until maintenance is finished. &lt;u&gt;More information.&lt;/u&gt;</string>
    <string name="min_coinbase">mined</string>
    <string name="internal">internal</string>
    <string name="filter">Filter</string>
    <string name="filter_all">All payments</string>
    <string name="filter_received">Received payments</string>
    <string name="filter_sent">Sent payments</string>
    <string name="request_legacy">Request to legacy address</string>
    <string name="encrypt_keys_set">Set PIN code</string>
    <string name="encrypt_change">Change PIN code</string>
    <string name="wallet_safety">Safety notes</string>
    <string name="technical_notes_title">Technical notes</string>
    <string name="insecure_bluetooth_title">Security alert</string>
    <string name="insecure_bluetooth_message">Your device\'s Bluetooth component is vulnerable. Your Bitcoins on this device are at risk, regardless of the app you\'re using to store them!\n\nWe suggest to switch off Bluetooth immediately and check with your device manufacturer for an Android OS update that implements security patch level \'%s\' or later.</string>
    <string name="low_storage">Internal device storage space low!</string>
    <string name="low_storage_msg">Bitcoin Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your Bitcoins will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
    <string name="timeskew_title">Check date &amp; time settings</string>
    <string name="timeskew_msg">Your device time is off by %d minutes. You probably cannot send or receive Bitcoins due to this problem.\n\nYou should check and if necessary correct your date, time and timezone settings.</string>
    <string name="version_title">A new version is available!</string>
    <string name="version_msg">This version fixes important bugs. For details, see the change log on %s.</string>
    <string name="fee_category">Fee</string>
    <string name="fee_economic_">Economic</string>
    <string name="fee_category_normal">Normal</string>
    <string name="fee_category_priority">Priority</string>
    <string name="option_empty">Empty wallet</string>
    <string name="raise_fee">Raise network fee</string>
    <string name="sweep_wallet">Sweep paper wallet</string>
    <string name="sweep_wallet_info">You are about to sweep a paper wallet or coupon. This will move all coins from that paper to your wallet on this device. When the transaction is confirmed, the paper will be worthless and should not be re-used for safety reasons.</string>
    <string name="hin_sweep_wallet">Paper wallets are most commonly used for cold storage. Some ATMs print them on their paper slip rather than sending the coins to your mobile device directly. People sometimes use pre-charged paper wallets to pass value around (not recommended).</string>
    <string name="sweep_wallet_pass">password</string>
    <string name="sweep_wallet_bad_pass">bad password!</string>
    <string name="edit_address_label">Address</string>
    <string name="network_monitor">Network</string>
    <string name="encrypt_keys">Spending PIN</string>
    <string name="precision_title">Denomination and precision</string>
    <string name="precision_summary">Unit to show amounts in. This does not affect computations.</string>
    <string name="own_name_title">Own name</string>
    <string name="own_name_summary">Name of yourself, to be added to payment requests. Try to keep it short.</string>
    <string name="autoclose_title">Auto-close send coins dialog</string>
    <string name="autoclose_summary">When the payment is made, the send dialog will close automatically.</string>
    <string name="connectivity_notification_title">Connectivity indicator</string>
    <string name="connectivity_notification_summary">Show current number of connected peers in the notification area.</string>
    <string name="trusted_peer_title">Trusted peer</string>
    <string name="trusted_peer_summary">IP or hostname of single peer to connect to.</string>
    <string name="trusted_peer_only">Skip regular peer discovery</string>
    <string name="trusted_peer_only_summary">Prevents connecting to any peers besides the trusted peer.</string>
    <string name="remind_balance">Balance reminder</string>
    <string name="remind_balance_summary">After a couple of weeks of not being used, the app will notify if there are still coins in the wallet.</string>
    <string name="report_issue">Report issue</string>
    <string name="initiate_reset">Reset block chain</string>
    <string name="initiate_reset_summary">Reset block chain, transactions and wallet balance. Replay will take a while, so only do this if you know why.</string>
    <string name="extended_public_key">Show extended public key</string>
    <string name="extended_public_key_summary">View the extended public key of your wallet, so it can be imported into other apps and services. Be careful: doing so will disclose your monetary privacy to that app.</string>
    <string name="report_issue_title">Report issue</string>
    <string name="about_copyright_title">Copyright</string>
    <string name="about_license_title">License</string>
    <string name="about_source_title">Source code</string>
    <string name="about_category_credits">This app is using…</string>
    <string name="about_credits_zxing_title">ZXing, a QR-code processing library</string>
    <string name="about_credits_bouncycastle_title">Bouncy Castle, a cryptography library</string>
    <string name="about_credits_scrypt_title">Scrypt, an implementation of the key derivation function</string>
    <string name="about_credits_okhttp_title">OkHttp, an HTTP client library</string>
    <string name="about_credits_moshi_title">Moshi, a JSON library</string>
    <string name="about_credits_guava_title">Guava, a collection of useful helpers</string>
</resources>