<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
            android:summary="©2019, the Bitcoin Wallet"
            android:title="@string/about_copyright_title"/>
    <Preference
            android:key="about_license"
            android:summary="https://www.gnu.org/licenses/gpl-3.0.txt"
            android:title="@string/about_license_title">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.gnu.org/licenses/gpl-3.0.txt"/>
    </Preference>
    <Preference
            android:key="about_source"
            android:summary="https://github.com/hoanghiephui/Bitcoin-Wallet"
            android:title="@string/about_source_title">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/hoanghiephui/Bitcoin-Wallet"/>
    </Preference>

    <PreferenceCategory android:title="@string/about_category_credits">
        <Preference
                android:key="about_credits_bitcoinj"
                android:summary="https://bitcoinj.github.io">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://bitcoinj.github.io"/>
        </Preference>
        <Preference
                android:key="about_credits_zxing"
                android:summary="https://github.com/zxing/zxing"
                android:title="@string/about_credits_zxing_title">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/zxing/zxing"/>
        </Preference>
        <Preference
                android:key="about_credits_bouncycastle"
                android:summary="https://github.com/rtyley/spongycastle"
                android:title="@string/about_credits_bouncycastle_title">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/rtyley/spongycastle"/>
        </Preference>
        <Preference
                android:key="about_credits_scrypt"
                android:summary="https://github.com/wg/scrypt"
                android:title="@string/about_credits_scrypt_title">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/wg/scrypt"/>
        </Preference>
        <Preference
                android:key="about_credits_okhttp"
                android:summary="https://github.com/square/okhttp"
                android:title="@string/about_credits_okhttp_title">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/square/okhttp"/>
        </Preference>
        <Preference
                android:key="about_credits_moshi"
                android:summary="https://github.com/square/moshi"
                android:title="@string/about_credits_moshi_title">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/square/moshi"/>
        </Preference>
        <Preference
                android:key="about_credits_guava"
                android:summary="https://github.com/google/guava"
                android:title="@string/about_credits_guava_title">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/google/guava"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
