<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground">

    <include
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/include2"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sweep_wallet_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/include2"
            android:layout_marginTop="8dp"
            android:id="@+id/textView4"/>

    <TextView
            android:id="@+id/messageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/badPasswordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/sweep_wallet_bad_pass"
            android:textColor="@color/fg_error"
            tools:visibility="visible"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/messageView1"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sweep_wallet_pass"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/badPasswordView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:textSize="13sp"
                android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordViewGroup"
            android:visibility="gone"
            app:constraint_referenced_ids="badPasswordView,password"/>

    <TextView
            android:id="@+id/balanceView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewGo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewCancel"
            app:layout_constraintEnd_toStartOf="@+id/viewGo"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/viewGo"
            app:layout_constraintBottom_toBottomOf="@+id/viewGo"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <include
            layout="@layout/item_transaction"
            tools:visibility="visible"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/viewCancel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <TextView
            android:id="@+id/hintView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hin_sweep_wallet"
            android:textColor="@color/fg_less_significant"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintBottom_toTopOf="@+id/transaction_row"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>